@@ -15,3 +15,6 @@ dataclasses_json
 pymongo
 mysql-connector-python
 bcrypt
+pyyaml
+uritemplate
+drf-spectacular
