@@ -1,3 +1,9 @@
+12 January 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * backend-django/DjangoClarin/settings.py:
+ * backend-django/DjangoClarin/urls.py:
+ * backend-django/requirements.txt: Added support for OpenAI through the
+ drf-spectacular Django package.
+
 07 January 2022 Petasis George <petasis@iit.demokritos.gr>:
  * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
  * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
